fix: optimize achievement/streak performance and testability
- C1: Replace full session loading with aggregate queries (sumHitsByUserId, countByUserId)
- C2: Pass latest session directly to checkAndAward, avoid redundant queries
- I5: Batch-load existing achievements into Set, replace 14 existsBy calls with in-memory check
- I4: Inject Clock into StreakService for testable time handling

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>